--- a/templates/front/devis/email.html.twig
+++ b/templates/front/devis/email.html.twig
@@ -1,5 +1,14 @@
 {% block body_text %}
 
+	<!--[if gte mso 9]>
+		<xml>
+		  <o:OfficeDocumentSettings>
+		    <o:AllowPNG/>
+		    <o:PixelsPerInch>96</o:PixelsPerInch>
+		  </o:OfficeDocumentSettings>
+		</xml>
+		<![endif]-->
+
 	<!--[if IE]><div class="ie-container"><![endif]-->
 	<!--[if mso]><div class="mso-container"><![endif]-->
 		<table id="u_body" style="border-collapse: collapse;table-layout: fixed;border-spacing: 0;mso-table-lspace: 0pt;mso-table-rspace: 0pt;vertical-align: top;min-width: 320px;Margin: 0 auto;background-color: #ffffff;width:100%" cellpadding="0" cellspacing="0"> <tbody>
@@ -169,7 +178,6 @@
 
 																Je reviens vers vous dans 48h/72h maximum, vérifiez votre adresse email, passé ce délai, veuillez me contacter.<a href="mailto:wbelbeche.s@gmail.com">Clickez ici</a>
 																<br>
-																À bientôt !
 															</p>
 														</td>
 													</tr>
@@ -239,10 +247,10 @@
 					</div>
 
 
-					<div class="u-row-container" style="padding: 30px;background-color: #f0f0f0">
+					<div class="u-row-container" style="padding: 30px;">
 						<div class="u-row" style="Margin: 0 auto;min-width: 320px;max-width: 600px;overflow-wrap: break-word;word-wrap: break-word;word-break: break-word;background-color: transparent;">
 							<div style="border-collapse: collapse;display: table;width: 100%;height: 100%;background-color: transparent;">
-								<!--[if (mso)|(IE)]><table width="100%" cellpadding="0" cellspacing="0" border="0"><tr><td style="padding: 30px;background-color: #f0f0f0;" align="center"><table cellpadding="0" cellspacing="0" border="0" style="width:600px;"><tr style="background-color: transparent;"><![endif]-->
+								<!--[if (mso)|(IE)]><table width="100%" cellpadding="0" cellspacing="0" border="0"><tr><td style="padding: 30px;" align="center"><table cellpadding="0" cellspacing="0" border="0" style="width:600px;"><tr style="background-color: transparent;"><![endif]-->
 
 								<!--[if (mso)|(IE)]><td align="center" width="600" style="width: 600px;padding: 0px;border-top: 0px solid transparent;border-left: 0px solid transparent;border-right: 0px solid transparent;border-bottom: 0px solid transparent;" valign="top"><![endif]-->
 									<div class="u-col u-col-100" style="max-width: 320px;min-width: 600px;display: table-cell;vertical-align: top;"> <div
@@ -259,11 +267,12 @@
 
 															<div style="line-height: 120%; text-align: left; word-wrap: break-word;">
 																<div style="font-family: arial, helvetica, sans-serif;">
-																	<span style="font-size: 12px; color: #999999; line-height: 14.4px;">You received this email because you signed up for My Company Inc.</span>
+																	<span style="font-size: 12px; color: #999999; line-height: 14.4px;">Vous avez reçu cet e-mail parce que vous venez de faire une demande de devis.</span>
 																</div>
 																<div style="font-family: arial, helvetica, sans-serif;">&nbsp;</div>
 																<div style="font-family: arial, helvetica, sans-serif;">
-																	<span style="font-size: 12px; color: #999999; line-height: 14.4px;">Unsubscribe</span>
+																	<span style="font-size: 12px; color: #999999; line-height: 14.4px;">À bientôt !
+																	</span>
 																</div>
 															</div>
 
